--- a/mmmm.html
+++ b/mmmm.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-<div class="mma">11116666</div>
+<div class="mma">我是谁</div>
 </body>
 <script type="text/javascript">
 	alert(6);
